new file:   .gitignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,28 +5,47 @@ services:
   ghost:
     image: ghost:4-alpine
     restart: always
-    ports:
-      - 8089:2368
+    container_name: ghost-autogpt
+    # ports:
+    #   - 8089:2368
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.ghost.rule=Host(`auto-gpt.tech`)"
+      - "traefik.http.routers.ghost.entrypoints=websecure"
+      - "traefik.http.routers.ghost.tls.certresolver=myresolver"
     environment:
       # see https://ghost.org/docs/config/#configuration-options
       database__client: mysql
       database__connection__host: db
-      database__connection__user: root
-      database__connection__password: example
-      database__connection__database: ghost
+      database__connection__user: ${DB_USER}
+      database__connection__password: ${DB_PASSWORD}
+      database__connection__database: ${DATABASE}
       # this url value is just an example, and is likely wrong for your environment!
-      url: http://localhost:8089
+      url: ${GHOST_URL}
       # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
       #NODE_ENV: development
     volumes:
-      - some-ghost-data:/var/lib/ghost/content
+      - ghost-data:/var/lib/ghost/content
+    networks:
+      - autogpt-ghost
+      - auto-gpt.tech
     
 
   db:
     image: mysql:8.0
+    container_name: ghost-db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+    networks:
+      - autogpt-ghost
+    volumes:
+      - ghost-db-data:/var/lib/mysql
   
 volumes:
-  some-ghost-data:
+  ghost-data:
+  ghost-db-data:
+networks:
+  auto-gpt.tech:
+    external: true
+  autogpt-ghost:
