new file:   config.production.json

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-DB_USER=root
-DB_PASSWORD=example
-DATABASE=ghost
-
-GHOST_URL=https://auto-gpt.tech
+MYSQL_DATABASE=ghost 
+MYSQL_USER=ghost 
+MYSQL_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX 
+MYSQL_ROOT_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX
