modified:   docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     image: mysql:8.0
     container_name: ghost-db
     restart: always
+    hostname: db
     env_file:
       - .env
     volumes:
