--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-MYSQL_DATABASE=ghost 
-MYSQL_USER=ghost 
-MYSQL_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX 
-MYSQL_ROOT_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX
+DB_USER=root
+DB_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX
+DATABASE=ghost
+
+GHOST_URL=https://auto-gpt.tech
