--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,19 @@ services:
       - "traefik.http.routers.ghost.rule=Host(`auto-gpt.tech`)"
       - "traefik.http.routers.ghost.entrypoints=websecure"
       - "traefik.http.routers.ghost.tls.certresolver=myresolver"
+    environment:
+      # see https://ghost.org/docs/config/#configuration-options
+      database__client: mysql
+      database__connection__host: db
+      database__connection__user: ${DB_USER}
+      database__connection__password: ${DB_PASSWORD}
+      database__connection__database: ${DATABASE}
+      # this url value is just an example, and is likely wrong for your environment!
+      url: ${GHOST_URL}
+      # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
+      #NODE_ENV: development
     volumes:
       - ./content:/var/lib/ghost/content
-      - ./config.production.json:/var/lib/ghost/config.development.json
     networks:
       - auto-gpt.tech
     depends_on:
@@ -23,14 +33,14 @@ services:
 
   db:
     image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
     container_name: ghost-db
     restart: always
-    env_file:
-      - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     volumes:
-      - ./log:/var/log/mysql
-      - ./lib:/var/lib/mysql
-
+          - ./log:/var/log/mysql
+          - ./lib:/var/lib/mysql
 networks:
   auto-gpt.tech:
     external: true
