--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-DB_USER=root
-DB_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX
-DATABASE=ghost
+MYSQL_ROOT_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX
+MYSQL_DATABASE=ghostdata
+MYSQL_USER=ghostusr
+MYSQL_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX 
+# DB_USER=root
+# DB_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX
+# DATABASE=ghost
 
-GHOST_URL=https://auto-gpt.tech
+# GHOST_URL=https://auto-gpt.tech
