--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3.1'
 
 services:
-
   ghost:
-    image: ghost:4-alpine
+    image: ghost:latest
     restart: always
     container_name: ghost-autogpt
     # ports:
@@ -14,32 +13,27 @@ services:
       - "traefik.http.routers.ghost.entrypoints=websecure"
       - "traefik.http.routers.ghost.tls.certresolver=myresolver"
     environment:
-      # see https://ghost.org/docs/config/#configuration-options
-      database__client: mysql
-      database__connection__host: db
-      database__connection__user: ${DB_USER}
-      database__connection__password: ${DB_PASSWORD}
-      database__connection__database: ${DATABASE}
-      # this url value is just an example, and is likely wrong for your environment!
-      url: ${GHOST_URL}
-      # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
-      #NODE_ENV: development
+      - ENV=production (so development mode needs to be explicitly specified if desired)
+     
     volumes:
-      - ./content:/var/lib/ghost/content
+      - $PWD/ghost/volumes/config.production.json:/var/lib/ghost/config.production.json:z
+      - ./ghost/content:/var/lib/ghost/content
     networks:
       - auto-gpt.tech
     depends_on:
       - db
 
   db:
-    image: mysql:8.0
-    command: --default-authentication-plugin=mysql_native_password
+    image: mysql:latest
     container_name: ghost-db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD} 
     volumes:
-      - ghost-db-data:/var/lib/mysql
+      - ghost-db-data:/var/lib/mysql:z
   
 volumes:
   ghost-db-data:
