--- a/ghost/config.production.json
+++ b/ghost/config.production.json
@@ -7,7 +7,7 @@
     "database": {
         "client": "mysql",
         "connection": {
-            "host": "mysql",
+            "host": "db",
             "port": 3306,
             "user": "ghost",
             "password": "83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX",
