modified:   docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
     networks:
       - auto-gpt.tech
     depends_on:
-      - db
+      - mysql
     links:
-      - db
+      - mysql
 
   mysql:
     image: mysql:latest
