--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   ghost:
-    image: ghost:4
+    image: ghost:latest
     restart: always
     container_name: ghost-autogpt
     # ports:
@@ -28,10 +28,14 @@ services:
       - ./content:/var/lib/ghost/content
     networks:
       - auto-gpt.tech
+    links:
+      - db:db
+    depends_on:
+      - db
 
   db:
-    image: mysql:5.7
-    # command: --default-authentication-plugin=mysql_native_password
+    image: mariadb:latest
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
