--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,10 @@ services:
     networks:
       - auto-gpt.tech
       - default
+    depends_on:
+      - db
+    links:
+      - db
   db:
     image: mysql:8.0
     restart: always
