--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,8 @@ services:
       #NODE_ENV: development
     networks:
       - auto-gpt.tech
+      - default
     depends_on:
-      - db
-    links:
       - db
   db:
     image: mysql:8.0
@@ -35,6 +34,10 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
+    networks:
+      - default
+    labels:
+      - "traefik.enable=false"
     
 volumes:
   ghost-db-data:
