--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - "traefik.http.routers.ghost.rule=Host(`auto-gpt.tech`)"
       - "traefik.http.routers.ghost.entrypoints=websecure"
       - "traefik.http.routers.ghost.tls.certresolver=myresolver"
+      - "traefik.http.routers.ghost-insecure.rule=Host(`myapp.example.com`)"
+      - "traefik.http.routers.ghost-insecure.entrypoints=web"
+      - "traefik.http.routers.ghost-insecure.middlewares=redirecthttps"
     environment:
       # see https://ghost.org/docs/config/#configuration-options
       database__client: mysql
