modified:   docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     labels:
       - "traefik.enable=false"
     volumes:
-      - ghost-db-data
+      - ghost-db-data:/var/lib/mysql:z
     
 volumes:
   ghost-db-data:
