--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     #   - 8090:2368
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.ghost-insecure.rule=Host(`auto-gpt.tech`)"
-      - "traefik.http.routers.ghost-insecure.entrypoints=web"
-      - "traefik.http.middlewares.ghost-redirect-web-secure.redirectscheme.scheme=https"
-      - "traefik.http.routers.ghost-insecure.middlewares=ghost-redirect-web-secure"
-      - "traefik.http.routers.ghost.rule=Host(`auto-gpt.tech`)"
-      - "traefik.http.routers.ghost.entrypoints=websecure"
-      - "traefik.http.routers.ghost.tls=true"
-      - "traefik.http.routers.ghost.tls.certresolver=myresolver"
+      - "traefik.http.routers.ghost-xgpt-insecure.rule=Host(`xgpt.nrw`)"
+      - "traefik.http.routers.ghost-xgpt-insecure.entrypoints=web"
+      - "traefik.http.middlewares.ghost-xgpt-redirect-web-secure.redirectscheme.scheme=https"
+      - "traefik.http.routers.ghost-insecure.middlewares=ghost-xgpt-redirect-web-secure"
+      - "traefik.http.routers.ghost-xgpt.rule=Host(`xgpt.nrw`)"
+      - "traefik.http.routers.ghost-xgpt.entrypoints=websecure"
+      - "traefik.http.routers.ghost-xgpt.tls=true"
+      - "traefik.http.routers.ghost-xgpt.tls.certresolver=myresolver"
     environment:
       # see https://ghost.org/docs/config/#configuration-options
       database__client: mysql
@@ -25,12 +25,12 @@ services:
       database__connection__password: example
       database__connection__database: ghost
       # this url value is just an example, and is likely wrong for your environment!
-      url: https://auto-gpt.tech
+      url: https://xgpt.nrw
       # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
       #NODE_ENV: development
     networks:
       - auto-gpt.tech
-      - ghost-networks
+      - ghost-xgpt-networks
     volumes:
       - ./content:/var/lib/ghost/content
     depends_on:
@@ -46,11 +46,11 @@ services:
     labels:
       - "traefik.enable=false"
     volumes:
-      - ghost-db-data:/var/lib/mysql:z
+      - ghost-xgpt-db-data:/var/lib/mysql:z
     
 volumes:
-  ghost-db-data:
+  ghost-xgpt-db-data:
 networks:
   auto-gpt.tech:
     external: true
-  ghost-networks:
+  ghost-xgpt-networks:
