--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     environment:
       # see https://ghost.org/docs/config/#configuration-options
       database__client: mysql
-      database__connection__host: mium-db
+      database__connection__host: db
       database__connection__user: ${DB_USER}
       database__connection__password: ${DB_PASSWORD}
       database__connection__database: ${DATABASE}
@@ -38,7 +38,6 @@ services:
       - db
   db:
     image: mysql:8.0
-    container_name: mium-db
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
