--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,19 +19,20 @@ services:
       - "traefik.http.routers.ghost-xgpt.tls.certresolver=myresolver"
     environment:
       # see https://ghost.org/docs/config/#configuration-options
-      database__client: mysql
-      database__connection__host: db
-      database__connection__user: root
-      database__connection__password: example
-      database__connection__database: ghost
+      # database__client: mysql
+      # database__connection__host: db
+      # database__connection__user: root
+      # database__connection__password: example
+      # database__connection__database: ghost
       # this url value is just an example, and is likely wrong for your environment!
-      url: https://xgpt.nrw
+      # url: https://xgpt.nrw
       # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
-      #NODE_ENV: development
+      NODE_ENV: production
     networks:
       - auto-gpt.tech
       - ghost-xgpt-networks
     volumes:
+      - ./config.production.json:/var/lib/ghost/config.production.json:z
       - ./content:/var/lib/ghost/content
     depends_on:
       - db
