ghost:5.60.0-alpine ready

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,13 @@ version: '3.1'
 services:
 
   ghost:
-    image: ghost:4-alpine
+    image: ghost:5.60.0-alpine
     restart: always
     # ports:
     #   - 8090:2368
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=auto-gpt.tech"
       - "traefik.http.routers.ghost-insecure.rule=Host(`auto-gpt.tech`)"
       - "traefik.http.routers.ghost-insecure.entrypoints=web"
       - "traefik.http.middlewares.ghost-redirect-web-secure.redirectscheme.scheme=https"
@@ -19,19 +20,20 @@ services:
       - "traefik.http.routers.ghost.tls.certresolver=myresolver"
     environment:
       # see https://ghost.org/docs/config/#configuration-options
-      database__client: mysql
-      database__connection__host: db
-      database__connection__user: root
-      database__connection__password: example
-      database__connection__database: ghost
+      # database__client: mysql
+      # database__connection__host: db
+      # database__connection__user: root
+      # database__connection__password: example
+      # database__connection__database: ghost
       # this url value is just an example, and is likely wrong for your environment!
-      url: https://auto-gpt.tech
+      # url: https://auto-gpt.tech
       # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
-      #NODE_ENV: development
+      NODE_ENV: production
     networks:
       - auto-gpt.tech
       - ghost-networks
     volumes:
+      - ./config.production.json:/var/lib/ghost/config.production.json:z
       - ./content:/var/lib/ghost/content
     depends_on:
       - db
