--- a/config.production.json
+++ b/config.production.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://auto-gpt.tech",
+    "url": "https://dok.mium.chat",
     "server": {
       "port": 2368,
       "host": "0.0.0.0"
@@ -9,7 +9,7 @@
       "connection": {
         "host": "db",
         "port": 3306,
-        "user": "ghost",
+        "user": "root",
         "password": "83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX",
         "database": "ghost"
       }
