--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,13 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=auto-gpt.tech"
+      - "traefik.http.middlewares.wwwtohttps.redirectregex.regex=^https?://www\\.(.+)"
+      - "traefik.http.middlewares.wwwtohttps.redirectregex.replacement=https://${1}"
+      - "traefik.http.middlewares.wwwtohttps.redirectregex.permanent=true"
       - "traefik.http.routers.ghost-mium-insecure.rule=Host(`dok.mium.chat`)"
       - "traefik.http.routers.ghost-mium-insecure.entrypoints=web"
       - "traefik.http.middlewares.ghost-mium-redirect-web-secure.redirectscheme.scheme=https"
-      - "traefik.http.routers.ghost-insecure.middlewares=ghost-mium-redirect-web-secure"
+      - "traefik.http.routers.ghost-mium-insecure.middlewares=ghost-mium-redirect-web-secure,wwwtohttps"
       - "traefik.http.routers.ghost-mium.rule=Host(`dok.mium.chat`)"
       - "traefik.http.routers.ghost-mium.entrypoints=websecure"
       - "traefik.http.routers.ghost-mium.tls=true"
