modified:   config.production.json

--- a/config.production.json
+++ b/config.production.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://dok.mium.chat",
+    "url": "https://www.dok.mium.chat",
     "server": {
       "port": 2368,
       "host": "0.0.0.0"
