--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,13 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=auto-gpt.tech"
+      - "traefik.http.middlewares.wwwtohttps.redirectregex.regex=^https?://www\\.(.+)"
+      - "traefik.http.middlewares.wwwtohttps.redirectregex.replacement=https://$${1}"
+      - "traefik.http.middlewares.wwwtohttps.redirectregex.permanent=true"
       - "traefik.http.routers.ghost-insecure.rule=Host(`11ki.de`) || Host(`www.11ki.de`)"
       - "traefik.http.routers.ghost-insecure.entrypoints=web"
       - "traefik.http.middlewares.ghost-redirect-web-secure.redirectscheme.scheme=https"
-      - "traefik.http.routers.ghost-insecure.middlewares=ghost-redirect-web-secure"
+      - "traefik.http.routers.ghost-insecure.middlewares=ghost-redirect-web-secure,wwwtohttps"
       - "traefik.http.routers.ghost.rule=Host(`11ki.de`) || Host(`www.11ki.de`)"
       - "traefik.http.routers.ghost.entrypoints=websecure"
       - "traefik.http.routers.ghost.tls=true"
