--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ DB_USER=root
 DB_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX
 DATABASE=ghost
 
-GHOST_URL=https://www.11ki.de
+GHOST_URL=https://www.kiprojekt.de
