--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 DB_USER=root
-DB_PASSWORD=83ZU2D8RY3FNVgLearitFC4lXoUkdW807coi3ap1CrOlThrX
+DB_PASSWORD=Avery$trongPWa2z
 DATABASE=ghost
-
-GHOST_URL=https://www.11ki.de
+GHOST_URL=https://www.daten.team
