--- a/config.production.json
+++ b/config.production.json
@@ -10,7 +10,7 @@
       "host": "db",
       "port": 3306,
       "user": "root",
-      "password": "Avery$trongPWa2z",
+      "password": "AveryStrongPWa2z",
       "database": "ghost"
     }
   },
