--- a/compose.yml
+++ b/compose.yml
@@ -40,11 +40,11 @@ services:
       - db
   db:
     image: mysql:8.0
-    command: --default-authentication-plugin=mysql_native_password
+    # command: --default-authentication-plugin=mysql_native_password
     restart: always
     container_name: ghost_daten_db
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: AveryStrongPWa2z
     networks:
       - ghost-daten-networks
     labels:
